# stat

./: .gitignore  COPYING  Makefile.am  README  autogen.sh  configure.in
doc/: Makefile.in
src/: Makefile.am
src/csv/: Makefile.am  csv.c  csv.h
src/stat/: Makefile.am  main.c  stat_main.c
src/test/: Makefile.am  test.c
src/ui/: Makefile.am
