dnl Copyright (c) 2012, Johannes Thumshirn

AC_INIT
AM_INIT_AUTOMAKE(stat, 0.1-alpha-dev)
AM_CONFIG_HEADER(config.h)

AC_CANONICAL_HOST

AC_CHECK_FUNCS([strerror])
AC_CHECK_FUNCS([memset])
AC_CHECK_FUNCS([strdup])
AC_CHECK_FUNCS([strstr])


AC_CHECK_HEADERS([string.h])

AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_FUNC_FORK

AC_HEADER_STDBOOL

AC_TYPE_PID_T
AC_TYPE_SIZE_T

AC_PROG_CC
AC_PROG_RANLIB

AC_CONFIG_FILES([
	Makefile
	doc/Makefile
	src/Makefile
	src/csv/Makefile
	src/ui/Makefile
	src/stat/Makefile
	src/test/Makefile
])

AC_OUTPUT